--- a/iOS/Info.plist
+++ b/iOS/Info.plist
@@ -37,10 +37,10 @@
 	</array>
 	<key>CFBundleIconFiles</key>
 	<array>
+		<string>Icon.png</string>
 		<string>Icon-60@2x.png</string>
 		<string>Icon-Small@2x.png</string>
 		<string>Icon-Small.png</string>
-		<string>Icon-Small-40@2x.png</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
